--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -14,7 +14,7 @@ body {
 
 /* Mis trabajos */
 
-#Mis-trabajos .image-top {
+.image-top {
   height: 250px;
   background-repeat: no-repeat;
   background-size: cover;
